[gd_scene load_steps=19 format=2]

[ext_resource path="res://characters/enemies/boss/death/GoblinKing_Death_1.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/boss/walk/GoblinKing_Walk_3.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/boss/walk/GoblinKing_Walk_2.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/boss/death/GoblinKing_Death_3.png" type="Texture" id=4]
[ext_resource path="res://characters/enemies/boss/death/GoblinKing_Death_0.png" type="Texture" id=5]
[ext_resource path="res://characters/enemies/boss/death/GoblinKing_Death_2.png" type="Texture" id=6]
[ext_resource path="res://characters/enemies/boss/walk/GoblinKing_Walk_0.png" type="Texture" id=7]
[ext_resource path="res://characters/enemies/boss/walk/GoblinKing_Walk_1.png" type="Texture" id=8]
[ext_resource path="res://characters/enemies/boss/boss.gd" type="Script" id=9]
[ext_resource path="res://characters/enemies/boss/attack/GoblinKing_Attack_1.png" type="Texture" id=10]
[ext_resource path="res://characters/enemies/boss/attack/GoblinKing_Attack_2.png" type="Texture" id=11]
[ext_resource path="res://Audio/Sound Effects/Boss Lasers Attack.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/Sound Effects/Enemy Death 3.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/Sound Effects/Boss LAND.wav" type="AudioStream" id=14]
[ext_resource path="res://Audio/Sound Effects/Boss JUMP.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 0.5
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": false,
"name": "spawn",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": false,
"name": "death",
"speed": 2.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": false,
"name": "attack",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.6521, 65.7583 )

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="boss" type="KinematicBody2D" groups=[
"minimap_objects",
]]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "attack"
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15.4448, 59.7206 )
scale = Vector2( 5, 5 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 3 )

[node name="LASERS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="JUMP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -15.0

[node name="LAND" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -15.0

[node name="DIE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -20.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
